# ActiveLearningRegressor

./: .gitignore  LICENSE  PAPER.md  README.md  pyproject.toml  run_labAL_cycle.py  setup.py
activereg/: acquisition.py  adaptiveRefinement.py  beauty.py  benchmarkFunctions.py  cycle.py  data.py  experiment.py  format.py  hyperparams.py  metrics.py  mlmodel.py  sampling.py  utils.py
activereg/mlmodel/: __init__.py  _base.py  _bnn.py  _gpr.py  _kernels.py  _knn.py  _mlp.py  _multi_property.py
docs/lab_scripts/: DESIGN.md  STATE.md
docs/multi_property/: DESIGN.md  PHASES.md  STATE.md
examples/: config.toml  config.yaml  run_2dexample.py  run_insilico_experiment.py  run_labAL_cycle.py
examples/data/: proptest2d_1.npy  proptest2d_2.npy  proptest2d_3.npy
figures/: plot_helper_functions.py
figures/FIG_3_panels/: Ackley6_experiment_ranking.txt  Hartmann6_experiment_ranking.txt  Styblinski-Tang6_experiment_ranking.txt
scripts/: benchmark_config.yaml  benchmark_config_mlp.yaml  benchmark_experiment.py  benchmark_functions.py  benchmark_gtlandscape.py  insilico_lab_al_simulation.py  insilico_lab_al_simulation_config.yaml  knnregressor_config.yaml  lab_cycle_config_template.yaml  mlpanchored_config.yaml  plot_visual_benchmark_experiment.py  run_benchmark_funcs.sh  run_benchmark_gtlandsc.sh  run_lab_cycle.py  test_benchmark_multiprop_funcs.sh
scripts/general_config/: acquisition_mode_settings.yaml  acquisition_mode_settings_multiprop.yaml  benchmark_config.yaml  benchmark_config_multiprop.yaml  target_function_config.yaml  target_function_config_multiprop.yaml
(+104 files in other folders)
