[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activereg"
version = "0.1.0"
description = "Active learning framework for supervised regression problems."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Andrea Gardin" }]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "torch",
    "pyro-ppl",
    "botorch",
    "matplotlib",
    "seaborn",
    "joblib",
    "pyyaml",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/AGardinon/ActiveLearningRegressor"

[tool.setuptools.packages.find]
where = ["."]
include = ["activereg*"]
